fixed horizontal alignment, added grid

--- a/skapiec/src/App.css
+++ b/skapiec/src/App.css
@@ -55,12 +55,14 @@ h1 {
 
 
 .container {
-  width: 100%;
-  margin-top: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+ /* width: 100%;
+  margin-top: 3rem;*/
+  display: grid;
+  grid-template-columns: repeat(4,120px);
+  grid-auto-rows:(150px, auto);
+  grid-column-gap: 150px;
+  row-gap:20px;
+
 }
 
  .search button {
@@ -119,7 +121,7 @@ h1 {
 
 .item div:nth-of-type(2) {
   width: 100%;
-  height: 100%;
+  height: 150px;
 }
 
 .item .img {
@@ -158,9 +160,6 @@ h1 {
   opacity: 0.3;
 }
 
-.item:hover div:nth-of-type(2) {
-  background-color: transparent;
-}
 
 .item:hover div:nth-of-type(1) {
   opacity: 1;
